<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space1"
    tools:context="com.example.android.spacequiz.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                style="@style/QuizAppGenericText"
                android:layout_marginBottom="@dimen/margin_md"
                android:layout_marginLeft="@dimen/margin_md"
                android:layout_marginRight="@dimen/margin_md"
                android:layout_marginTop="@dimen/margin_sm"
                android:fontFamily="sans-serif-light"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="@dimen/title_size" />

            <TextView
                style="@style/QuestionsAndSubHeading"
                android:text="@string/app_welcome" />

            <TextView
                style="@style/QuizAppGenericText"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginLeft="@dimen/margin_md"
                android:layout_marginRight="@dimen/margin_md"
                android:layout_marginTop="@dimen/margin_sm"
                android:fontFamily="sans-serif-regular"
                android:text="@string/app_welcome_sub"
                android:textSize="@dimen/smaller_text" />

            <ImageView
                style="@style/ImageIcons"
                android:layout_marginBottom="@dimen/margin_md"
                android:layout_marginLeft="@dimen/margin_md"
                android:layout_marginRight="@dimen/margin_md"
                android:layout_marginTop="@dimen/margin_lg"
                android:src="@drawable/moonflag" />

            <EditText
                android:id="@+id/get_username"
                style="@style/EditTextField"
                android:hint="@string/app_user" />

            <CheckBox
                android:id="@+id/see_your_score"
                style="@style/CheckBoxField"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_md"
                android:layout_marginLeft="@dimen/margin_md"
                android:layout_marginRight="@dimen/margin_md"
                android:fontFamily="sans-serif-light"
                android:text="@string/app_user_score"
                android:textSize="@dimen/see_score"
                android:textStyle="italic" />

            <Button
                style="@style/QuizButton"
                android:onClick="continueQuiz"
                android:text="@string/app_button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_md" />

        </LinearLayout>

</ScrollView>
