<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space6"
    tools:context="com.example.android.spacequiz.FirstQuestion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_user_score"
            style="@style/AppScoreText" />

        <TextView
            style="@style/QuestionsAndSubHeading"
            android:id="@+id/first_question"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginTop="@dimen/margin_sm"
            android:text="@string/fifth_question" />

        <ImageView
            android:id="@+id/marsbuggy"
            style="@style/ImageIcons"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_marginLeft="@dimen/margin_lg"
            android:layout_marginRight="@dimen/margin_lg"
            android:layout_marginTop="@dimen/margin_lg"
            android:src="@drawable/marsbuggy" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/fifth_answer_one"
                style="@style/CheckBoxField"
                android:layout_marginBottom="@dimen/margin_lg"
                android:layout_marginLeft="@dimen/margin_lg"
                android:layout_marginRight="@dimen/margin_lg"
                android:text="@string/fifth_answer_first"
                android:textSize="@dimen/smaller_text" />

            <CheckBox
                android:id="@+id/fifth_answer_second"
                style="@style/CheckBoxField"
                android:layout_marginBottom="@dimen/margin_lg"
                android:layout_marginLeft="@dimen/margin_lg"
                android:layout_marginRight="@dimen/margin_lg"
                android:paddingRight="@dimen/padding_sm"
                android:text="@string/fifth_answer_second"
                android:textSize="@dimen/smaller_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <CheckBox
                android:id="@+id/fifth_answer_three"
                style="@style/CheckBoxField"
                android:layout_marginBottom="@dimen/margin_lg"
                android:layout_marginLeft="@dimen/margin_lg"
                android:layout_marginRight="@dimen/margin_lg"
                android:paddingRight="@dimen/padding_sm"
                android:text="@string/fifth_answer_third"
                android:textSize="@dimen/smaller_text" />

            <CheckBox
                android:id="@+id/fifth_answer_four"
                style="@style/CheckBoxField"
                android:layout_marginBottom="@dimen/margin_lg"
                android:layout_marginLeft="@dimen/margin_lg"
                android:layout_marginRight="@dimen/margin_lg"
                android:text="@string/fifth_answer_fourth"
                android:textSize="@dimen/smaller_text" />

        </LinearLayout>

        <ImageView
            style="@style/ImageIcons"
            android:layout_marginLeft="@dimen/margin_lg"
            android:layout_marginRight="@dimen/margin_lg"
            android:layout_marginTop="@dimen/margin_sm"
            android:src="@drawable/oval5" />


        <Button
            android:onClick="checkAnswers"
            android:layout_marginTop="@dimen/margin_lg"
            style="@style/QuizButton"
            android:text="@string/app_next" />



    </LinearLayout>

</ScrollView>
