<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space4"
    tools:context="com.example.android.spacequiz.FirstQuestion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_user_score"
            style="@style/AppScoreText" />

        <TextView
            style="@style/QuestionsAndSubHeading"
            android:id="@+id/first_question"
            android:layout_marginLeft="@dimen/margin_lg"
            android:layout_marginRight="@dimen/margin_lg"
            android:layout_marginTop="@dimen/margin_sm"
            android:text="@string/third_question" />

        <ImageView
            android:id="@+id/spaceman"
            style="@style/ImageIcons"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_marginLeft="@dimen/margin_lg"
            android:layout_marginRight="@dimen/margin_lg"
            android:layout_marginTop="@dimen/margin_xl"
            android:src="@drawable/spaceman" />


        <EditText
            android:id="@+id/third_answer_first"
            style="@style/EditTextField"
            android:hint="@string/third_answer_prompt" />


        <ImageView
            style="@style/ImageIcons"
            android:layout_marginLeft="@dimen/margin_lg"
            android:layout_marginRight="@dimen/margin_lg"
            android:layout_marginTop="@dimen/margin_xl"
            android:src="@drawable/oval3" />


        <Button
            android:onClick="checkAnswers"
            android:layout_marginTop="@dimen/margin_lg"
            style="@style/QuizButton"
            android:text="@string/app_next" />



    </LinearLayout>

</ScrollView>
