<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space1"
    tools:context="com.example.android.spacequiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_md"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            style="@style/QuizAppGenericText"
            android:id="@+id/user_final_score"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginTop="@dimen/margin_sm"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/score_summary"
            android:layout_marginBottom="@dimen/margin_lg"
            style="@style/QuestionsAndSubHeading" />

        <ImageView
            style="@style/ImageIcons"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginTop="@dimen/margin_lg"
            android:src="@drawable/stars" />

        <TextView
            style="@style/QuizAppGenericText"
            android:layout_marginBottom="@dimen/margin_md"
            android:layout_marginLeft="@dimen/margin_md"
            android:layout_marginRight="@dimen/margin_md"
            android:layout_marginTop="@dimen/margin_xl"
            android:fontFamily="sans-serif-regular"
            android:textStyle="italic"
            android:text="@string/app_share_results_friend"
            android:textSize="@dimen/smaller_text" />


        <Button
            style="@style/QuizButton"
            android:onClick="shareResults"
            android:text="@string/app_share_results" />

    </LinearLayout>

</ScrollView>
